--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
+    "lucide-react": "^0.541.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "recharts": "^2.12.3"
+    "recharts": "^2.12.3",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
